fix - Venuebox header alignmet

--- a/frontend/src/PagesAdmin/OpeningHoursAdminPage/OpeningHoursAdminPage.module.scss
+++ b/frontend/src/PagesAdmin/OpeningHoursAdminPage/OpeningHoursAdminPage.module.scss
@@ -33,7 +33,7 @@ $row-border-dark: #353535;
 }
 
 .venue_header {
-  padding: 0.5em 0.75em;
+  padding: 0.5em;
   font-size: 1.25em;
   font-weight: 700;
   color: $black;
